--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/boutique_shop
+MONGO_URI=mongodb+srv://nandhusuresh9493_db_user:OMfXa1zABBv8mFPq@boutique.wwhfoej.mongodb.net/boutique_shop?appName=boutique
 JWT_SECRET=your_jwt_secret_key_here
 RAZORPAY_KEY_ID=rzp_test_f6eGg9xIexcdCg
 RAZORPAY_KEY_SECRET=ND4JvIemwJv8iBrVPl8KFic5
